-bug#0001504: no newline fix
-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
-bug#0001626: Cacti does not pass currency symbols ($) used in labels/gprint strings to rrdtool during graph generation.
-bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
-bug#0001660: Modifying data template values is not working as expected. 
-bug#0001678: Adding graphs to a device fails to add entries to poller_item if using the script server 
-bug#0001768: perform consistency check on ds maximum vs. ds minimum
-bug#0001783: Graph Export: The ExportDate is wrong -> we will print current time and number of graphs, then
-bug#0001812: copying a data template ignores item templating
-bug#0001814: CLI - Add Device Script problem when SNMP Default is Disabled 
-bug#0001815: 1-minute with 5-minute crontab broken
-bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
-bug#0001819: MySQL "TYPE=" command deprecated since MySQL 4.1 removed in MySQL 5.4.4 
-bug#0001826: zoomed graph views should not have auto refresh since they do not change
-bug#0001828: reapply suggested values gramatical errors
-bug#0001835: invalid number of form tags on graphs.php?action=graph_edit
-bug#0001847: graph export is broken 
-bug#0001851: graph selector in graphs_new.php is broken when there is a data query without graphs 
-bug#0001855: Improper formatting of Data Queries Can Result in SQL Errors
-bug#0001862: ping graphs do not work with new version of iputils. 
-bug#0001867: rrdtool_funcion_fetch() wrong regex with some locales
-bug#0001876: strip_quotes from function.php altering hex values
-bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
-bug#0001882: lib/snmp.php fails if if max_oids undefined in snmp_walk function call
-bug#0001885: ping.pl does not account for ping using icmp_req rather than icmp_seq in some versions of ping 